Add mainfest file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
+        android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
         android:roundIcon="@mipmap/ic_launcher_round">
         <activity
             android:name=".MainActivity">
