--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.tonystark.android:socket:4.1.0'
+    implementation 'com.alibaba:fastjson:1.2.10'
+//    implementation 'com.google.code.gson:gson:2.6.2'
 }
