--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.tonystark.android:socket:4.1.0'
-    implementation 'com.alibaba:fastjson:1.2.10'
+    implementation 'com.alibaba:fastjson:1.2.62'
 //    implementation 'com.google.code.gson:gson:2.6.2'
 }
