--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,13 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.tonystark.android:socket:4.1.0'
     implementation 'com.alibaba:fastjson:1.2.62'
-//    implementation 'com.google.code.gson:gson:2.6.2'
 }
