--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+        android:name="com.merlin.global.Application"
         android:allowBackup="false"
         android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
         <activity
