--- a/Decoder/build.gradle
+++ b/Decoder/build.gradle
@@ -16,7 +16,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ""
-                abiFilters 'arm64-v8a','armeabi-v7a','x86','x86_64'
+                abiFilters 'arm64-v8a','armeabi-v7a'
             }
         }
     }
