--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.merlin.activity.FileBrowserActivity">
-
-        </activity>
+        <activity android:name="com.merlin.activity.FileBrowserActivity"/>
+        <activity android:name="com.merlin.activity.TransportActivity"
+             android:theme="@android:style/Theme.Translucent"/>
     </application>
 
 </manifest>
