--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.tonystark.android:socket:4.1.0'
     implementation 'com.alibaba:fastjson:1.2.62'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.readystatesoftware.systembartint:systembartint:1.0.4'
     implementation 'com.android.support:recyclerview-v7'
     implementation project(path: ':Decoder')
