Add media play activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name="com.merlin.activity.FileBrowserActivity"/>
         <activity android:name="com.merlin.activity.TransportActivity"/>
+        <activity android:name="com.merlin.activity.MediaPlayActivity"/>
         <service android:name="com.merlin.task.DownloadService"/>
     </application>
 
