--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao' // apply plugin
 
 android {
     compileSdkVersion 29
@@ -25,6 +26,11 @@ android {
     dataBinding {
         enabled = true
     }
+    greendao{
+        schemaVersion 1 // 数据库版本号
+        daoPackage 'com.merlin.database'//自动生成的dao的包名，包名默认是entity所在的包；
+        targetGenDir 'src/main/java'//生成数据库文件的目录
+    }
 }
 
 dependencies {
@@ -34,5 +40,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.readystatesoftware.systembartint:systembartint:1.0.4'
     implementation 'com.android.support:recyclerview-v7'
+    implementation 'org.greenrobot:greendao:3.2.0'
     implementation project(path: ':Decoder')
 }
