--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7'
     implementation 'net.zetetic:android-database-sqlcipher:3.5.7@aar'
     implementation 'org.greenrobot:greendao:3.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     implementation project(path: ':Decoder')
 }
