--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <application
         android:name="com.merlin.global.Application"
         android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="false">
         <activity
             android:name="com.merlin.activity.MainActivity">
