--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-
+    <!--        android:theme="@android:style/Theme.Translucent.NoTitleBar"-->
     <application
         android:name="com.merlin.global.Application"
-        android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+        android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="false">
         <activity
