--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.android.support:appcompat-v7:23.1.1'
+    implementation 'com.wang.avi:library:2.1.3'
     implementation project(path: ':Decoder')
 }
