--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <!--        android:theme="@android:style/Theme.Translucent.NoTitleBar"-->
     <application
+        android:requestLegacyExternalStorage="true"
         android:name="com.merlin.global.Application"
         android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
         android:networkSecurityConfig="@xml/network_security_config"
