--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:23.1.1'
     implementation 'com.wang.avi:library:2.1.3'
     implementation project(path: ':Decoder')
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 }
