--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.android.support:appcompat-v7:23.1.1'
+    implementation 'alexclin.httplite:httplite-okhttp3:2.0.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation project(path: ':Decoder')
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
