--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:requestLegacyExternalStorage="true"
         android:name="com.merlin.global.Application"
         android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:allowBackup="false">
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:label="NAS"
             android:launchMode="singleInstance"
