Finish file download function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,7 +96,7 @@
         </activity>
         <service android:name="com.merlin.task.DownloadService"/>
         <service android:name="com.merlin.media.MediaPlayService"/>
-        <service android:name="com.merlin.transport.ConveyorService"/>
+        <service android:name="com.merlin.conveyor.ConveyorService"/>
         <service android:name="com.merlin.transport.TransportService"/>
         <activity
             android:configChanges="orientation|screenSize"
