--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,8 +57,7 @@
         </activity>
         <activity android:name="com.merlin.activity.LoveDetailActivity" android:launchMode="standard">
             <intent-filter>
-                <action android:name="aeeeeee" />
-
+                <action android:name="dddd"/>
             </intent-filter>
         </activity>
         <activity android:name="com.merlin.activity.MediaSheetActivity"/>
