--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation project(path: ':Decoder')
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'com.github.lovetuzitong:MultiImageSelector:1.2'
+    implementation project(path: ':Photo')
 }
