--- a/Photo/build.gradle
+++ b/Photo/build.gradle
@@ -16,4 +16,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
