--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.merlin.client"
         minSdkVersion 15
-        targetSdkVersion= 29
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -46,7 +46,6 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'alexclin.httplite:httplite-okhttp3:2.0.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation project(path: ':Decoder')
