--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'alexclin.httplite:httplite-okhttp3:2.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation project(path: ':Decoder')
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
