--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
         android:networkSecurityConfig="@xml/network_security_config">
         <activity
+
             android:label="NAS"
-            android:launchMode="singleInstance"
             android:name="com.merlin.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +26,6 @@
             </intent-filter>
         </activity>
         <activity android:name="com.merlin.activity.FileBrowserActivity"
-            android:launchMode="singleInstance"
             android:label="@string/fileBrowser">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,11 +35,9 @@
         </activity>
         <activity android:name="com.merlin.activity.TransportActivity"
             android:theme="@style/activityTransportStyle"
-            android:launchMode="singleInstance"
             android:label="@string/fileTransport">
         </activity>
         <activity android:name="com.merlin.activity.MediaPlayActivity"
-            android:launchMode="singleInstance"
             android:label="@string/mediaPlay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -49,7 +46,6 @@
             </intent-filter>
         </activity>
         <activity android:name="com.merlin.activity.LoveActivity"
-            android:launchMode="singleInstance"
             android:label="@string/love">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -57,12 +53,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.merlin.activity.LoveDetailActivity" android:launchMode="standard">
+        <activity android:name="com.merlin.activity.LoveDetailActivity">
             <intent-filter>
                 <action android:name="dddd"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.merlin.activity.LocalPhotoChooseActivity" android:launchMode="standard">
+        <activity android:name="com.merlin.activity.LocalPhotoChooseActivity">
             <intent-filter>
                 <action android:name="dddsfasdd"/>
             </intent-filter>
@@ -70,7 +66,6 @@
         <activity android:name="com.merlin.activity.MediaSheetActivity"/>
         <activity android:name="com.merlin.activity.ConveyorActivity"
             android:theme="@style/activityConveyorStyle"
-            android:launchMode="singleInstance"
             android:label="@string/conveyor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
