--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,14 @@
             </intent-filter>
         </activity>
         <activity android:name="com.merlin.activity.MediaSheetDetailActivity"/>
+        <activity android:name="com.merlin.activity.WebsiteActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+            android:label="@string/personalWebsite">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name="com.merlin.activity.PhotoPreviewActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"/>
         <activity android:name="com.merlin.activity.FileReceiveActivity"
