--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
         <activity android:name="com.merlin.activity.MediaSheetDetailActivity"/>
         <activity android:name="com.merlin.website.AboutActivity"/>
         <activity android:name="com.merlin.website.TravelCategoryActivity"/>
-        <activity android:name="com.merlin.activity.WebsiteActivity"
+        <activity android:name="com.merlin.website.WebsiteActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
             android:label="@string/personalWebsite">
             <intent-filter>
