--- a/Decoder/build.gradle
+++ b/Decoder/build.gradle
@@ -39,6 +39,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation files('libs/jid3lib-0.6.1-SNAPSHOT.jar')
 }
