--- a/Decoder/build.gradle
+++ b/Decoder/build.gradle
@@ -13,10 +13,15 @@ android {
 
         consumerProguardFiles 'consumer-rules.pro'
 
+        sourceSets.main {
+            jni.srcDirs = []
+            jniLibs.srcDirs = ['src/main/jniLibs']//设置目标的so存放路径
+        }
+
         externalNativeBuild {
             cmake {
                 cppFlags ""
-                abiFilters 'arm64-v8a','armeabi-v7a'
+                abiFilters 'arm64-v8a','armeabi-v7a', "x86", "x86_64"
             }
         }
     }
