Add player model

--- a/FileManager/src/main/AndroidManifest.xml
+++ b/FileManager/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="merlin.intent.action.FILE_SELECT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
         <provider android:name="androidx.core.content.FileProvider"
