Add player model

--- a/FileManager/src/main/AndroidManifest.xml
+++ b/FileManager/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true">
-        <activity android:name="com.merlin.browser.FileBrowserActivity">
+        <activity android:name="com.merlin.browser.FileBrowserActivity"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
