--- a/FileManager/build.gradle
+++ b/FileManager/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.wang.avi:library:2.1.3'
 }
