--- a/FileManager/src/main/AndroidManifest.xml
+++ b/FileManager/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <application
         android:requestLegacyExternalStorage="true"
         android:label="@string/app_name"
+        android:name="com.merlin.browser.Application"
         android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true">
