--- a/FileManager/build.gradle
+++ b/FileManager/build.gradle
@@ -31,12 +31,14 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(path: ':Common')
+
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'androidx.core:core:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.wang.avi:library:2.1.3'
+    implementation files('libs/py4j.jar')
 }
