--- a/FileManager/build.gradle
+++ b/FileManager/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(path: ':Common')
 
+    implementation 'com.google.code.gson:gson:2.6.2'
+
+    //
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'androidx.core:core:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
@@ -41,4 +44,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation files('libs/py4j.jar')
+    implementation project(path: ':Task')
 }
