--- a/FileManager/src/main/AndroidManifest.xml
+++ b/FileManager/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true">
 
-        <activity android:name="com.file.activity.TaskActivity" android:launchMode="singleInstance">
+        <activity android:name="com.file.activity.TaskActivity"
+           android:theme="@style/taskActivityStyle" android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="dddd"/>
             </intent-filter>
@@ -36,6 +37,7 @@
             </intent-filter>
         </activity>
 
+        <service android:name="com.file.task.TaskService"/>
         <provider android:name="androidx.core.content.FileProvider"
             android:authorities="com.merlin.client.fileProvider"
             android:exported="false"
