Debug process progress

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,6 @@ include ':Common'
 include ':FileManager'
 include ':MediaPlayer'
 include ':Task'
+include ':LMMVVM'
+include ':LMCore'
+include ':IMAdapter'
