Add core library upload to JCenter

--- a/Decoder/build.gradle
+++ b/Decoder/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 29
     buildToolsVersion "21.0.3"
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -41,6 +41,12 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    android {
+        lintOptions {
+            abortOnError false
+        }
+    }
+
 }
 
 dependencies {
