--- a/FileManager/build.gradle
+++ b/FileManager/build.gradle
@@ -28,6 +28,12 @@ android {
         targetCompatibility = 1.8
     }
 
+    android {
+        lintOptions {
+            abortOnError false
+        }
+    }
+
 }
 
 dependencies {
