--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 include  ':Decoder'
 rootProject.name='Test'
 include ':Photo'
-include ':LinuxPlayer'
+//include ':LinuxPlayer'
 include ':Common'
 include ':FileManager'
 include ':MediaPlayer'
