Upload LMVVM to JCenter

--- a/Player/build.gradle
+++ b/Player/build.gradle
@@ -36,6 +36,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(path: ':LMMVVM')
+    implementation project(path: ':LMVVM')
     implementation project(path: ':LMCore')
 }
