--- a/Website/src/main/AndroidManifest.xml
+++ b/Website/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.merlin.player">
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    package="com.merlin.website">
+
     <application
-        android:name=".Application"
-        android:theme="@android:style/Theme.Wallpaper.NoTitleBar.Fullscreen"
-        android:allowBackup="true">
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@android:style/Theme.Wallpaper.NoTitleBar.Fullscreen">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
