--- a/FileManager/src/main/AndroidManifest.xml
+++ b/FileManager/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:name="com.merlin.browser.Application"
         android:theme="@android:style/Theme.Wallpaper.NoTitleBar"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:allowBackup="true">
+        android:allowBackup="false">
 
         <activity android:name="com.file.activity.TaskActivity"
            android:theme="@style/taskActivityStyle" android:launchMode="singleInstance">
@@ -23,7 +23,6 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.merlin.task.TaskService"/>
         <service android:name=".transport.FileTaskService"/>
         <activity android:name="com.file.activity.MediaChooseActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
@@ -59,7 +58,6 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.file.task.TaskService"/>
         <provider android:name="androidx.core.content.FileProvider"
             android:authorities="com.merlin.browser.fileProvider"
             android:exported="false"
