--- a/FileManager/build.gradle
+++ b/FileManager/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.2'
 
     //
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'androidx.core:core:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
