Fix nas file upload bugs

--- a/FileManager/src/main/AndroidManifest.xml
+++ b/FileManager/src/main/AndroidManifest.xml
@@ -48,7 +48,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.file.activity.PhotoPreviewActivity">
+        <activity android:name="com.file.activity.PhotoPreviewActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
