--- a/FileManager/build.gradle
+++ b/FileManager/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation files('libs/py4j.jar')
     implementation project(path: ':Task')
+    implementation project(path: ':LMDatabinding')
+    implementation project(path: ':LMCore')
 }
