--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,15 @@
-include  ':Decoder'
+//include  ':Decoder'
 rootProject.name='Test'
-include ':Photo'
+//include ':Photo'
 //include ':LinuxPlayer'
-include ':Common'
-include ':FileManager'
-include ':MediaPlayer'
-include ':Task'
-include ':LMMVVM'
+//include ':Common'
+//include ':FileManager'
+//include ':MediaPlayer'
+//include ':Task'
+//include ':LMMVVM'
 include ':LMCore'
-include ':IMAdapter'
-include ':Player'
-include ':LMVVM'
+//include ':IMAdapter'
+//include ':Player'
+//include ':LMVVM'
 include ':LMDatabinding'
-include ':Website'
+//include ':Website'
