--- a/FileManager/build.gradle
+++ b/FileManager/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation files('libs/py4j.jar')
     implementation project(path: ':Task')
-//    implementation project(path: ':LMDatabinding')
-//    implementation project(path: ':LMCore')
+    implementation project(path: ':LMVVM')
+    implementation project(path: ':LMDatabinding')
+    implementation project(path: ':LMCore')
 }
