--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         google()
@@ -20,6 +19,12 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
     }
+
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
+//    tasks.getByPath(":LMDatabinding:javadocRelease").enabled = false
 }
 
 task clean(type: Delete) {
