--- a/settings.gradle
+++ b/settings.gradle
@@ -2,14 +2,14 @@
 rootProject.name='Test'
 //include ':Photo'
 //include ':LinuxPlayer'
-//include ':Common'
-//include ':FileManager'
+include ':Common'
+include ':FileManager'
 //include ':MediaPlayer'
-//include ':Task'
+include ':Task'
 //include ':LMMVVM'
 include ':LMCore'
 //include ':IMAdapter'
 //include ':Player'
-//include ':LMVVM'
+include ':LMVVM'
 include ':LMDatabinding'
 //include ':Website'
